<resources>
    <string name="app_name">CustomersPortfolio</string>
    <string name="title_activity_lista_clientes">ListaClientesActivity</string>
    <string name="label_nome">Nome:</string>
    <string name="label_cpf">CPF:</string>
    <string name="label_data_nascimento">Data nascimento:</string>
    <string name="label_rg">RG:</string>
    <string name="gravar">Gravar</string>
    <string name="label_telefone">Telefone:</string>
    <string name="manter_cliente">Manter Cliente</string>
    <string name="alerta">Alerta</string>
    <string name="erro">Erro</string>
    <string name="ok">Ok</string>
    <string name="mascara_data">__/__/____</string>
    <string name="relatorio">Relatório</string>
    <string name="configuracoes">Configurações</string>
    <string name="cadastrado">Cadastrado</string>
    <string name="name">Nome</string>
    <string name="state">UF</string>
    <string name="label_cadastrado_em">Cadastrado em:</string>
    <string name="label_ate">Até</string>
    <string name="gerar">Gerar</string>
    <string name="label_uf">UF:</string>
    <string name="editar">Editar</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="limpar">Limpar</string>
    <string name="customers_portfolio">Customers Portfolio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">---</string>
    <string name="fechar">Fechar</string>
    <string name="document">CPF</string>
    <string name="documentoId">RG</string>
    <string name="nascimento">Nascimento</string>
    <string name="telephone">Telefone</string>
    <string name="label_nascido_de">Nascido de:</string>
    <string name="label_nascido_ate">Nascido até:</string>
    <string name="label_cadastrado_ate">Cadastrado até:</string>
    <string name="label_documento_cpf_rg">Documento (CPF, RG):</string>
    <string name="visualizar">Visualizar</string>
</resources>
