<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintWidth_default="percent"
    tools:context=".FiltersFragment">

    <TextView
        android:id="@+id/fragment_filters_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_nome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/fragment_filters_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_name"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/fragment_filters_label_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_documento_cpf_rg"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/fragment_filters_document"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_document"
        android:lines="1"
        android:inputType="number"
        android:maxLength="14"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/fragment_filters_label_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_uf"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_document"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/fragment_filters_state"
        android:layout_width="0dp"
        android:layout_height="?attr/listPreferredItemHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_state"
        app:layout_constraintWidth_percent="0.6"/>

    <TextView
        android:id="@+id/fragment_filters_label_borned_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_nascido_de"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_state"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/fragment_filters_borned_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_borned_from"
        app:layout_constraintWidth_percent="0.6" />

    <ImageButton
        android:id="@+id/fragment_filters_borned_from_calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@+id/fragment_filters_borned_from"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_borned_from"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_filters_label_borned_from"
        android:src="@drawable/baseline_calendar_today_black_24"
        android:contentDescription="@string/label_nascido_de" />

    <TextView
        android:id="@+id/fragment_filters_label_borned_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_nascido_ate"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_borned_from"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/fragment_filters_borned_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_borned_to"
        app:layout_constraintWidth_percent="0.6" />

    <ImageButton
        android:id="@+id/fragment_filters_borned_to_calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@+id/fragment_filters_borned_to"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_borned_to"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_filters_label_borned_to"
        android:src="@drawable/baseline_calendar_today_black_24"
        android:contentDescription="@string/label_nascido_de" />

    <TextView
        android:id="@+id/fragment_filters_label_registered_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_cadastrado_em"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_borned_to"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/fragment_filters_registered_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_registered_from"
        app:layout_constraintWidth_percent="0.6" />

    <ImageButton
        android:id="@+id/fragment_filters_registered_from_calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@+id/fragment_filters_registered_from"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_registered_from"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_filters_label_registered_from"
        android:src="@drawable/baseline_calendar_today_black_24"
        android:contentDescription="@string/label_nascido_de" />

    <TextView
        android:id="@+id/fragment_filters_label_registered_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cadastrado_ate"
        style="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_registered_from"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/fragment_filters_registered_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_registered_to"
        app:layout_constraintWidth_percent="0.6" />

    <ImageButton
        android:id="@+id/fragment_filters_registered_to_calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@+id/fragment_filters_registered_to"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_label_registered_to"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_filters_label_registered_to"
        android:src="@drawable/baseline_calendar_today_black_24"
        android:contentDescription="@string/label_cadastrado_ate" />

    <Button
        android:id="@+id/fragment_filters_visualize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_filters_registered_to"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/visualizar"/>

</android.support.constraint.ConstraintLayout>